--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux-basics",
+  "name": "redux-vanilla-and-toolkit-basics",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
